@modify :art: 更新部分代码不规范告警